Add premoderation support for comments: database changes, model updates, and notification logic adjustments.